--- a/templates/adminMenu.html
+++ b/templates/adminMenu.html
@@ -2,8 +2,84 @@
 <html>
     <head>
         <title>Administrative</title>
+        <link rel="stylesheet" type="text/css" href="/static/styles/console.css"/>
     </head>
     <body>
-        <h1>ADMIN CONSOLE</h1>
+        <h1 class='header'>ADMIN CONSOLE</h1>
+        <div class='content'>
+            <form id='leg_instance' method='POST' class='adminBox'>
+                <div class='row'>
+                    <div class='boxHeader'>Create Leg Instance</div>
+                </div>
+                <div class='row'>
+                    <div class='title'>Flight Id:</div>
+                    <select name='flight_id' required>
+                    {% for i in range(leg_instance_len_flight_id) %}
+                        <option value="{{leg_instance_flight_id[i]}}">{{leg_instance_flight_leg_data[i]}}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+                <div class='row'>
+                    <div class='title'>Airplane Id:</div>
+                    <select name='airplane_id' required>
+                    {% for i in range(leg_instance_len_airplanes) %}
+                        <option value="{{leg_instance_airplane_id[i]}}">{{leg_instance_airplane_data[i]}}</option>
+                    {% endfor %}
+                    </select>
+                </div>
+                <div class='row'>
+                    <div class='title'>Leg date:</div>
+                    <input name='leg_date' type='date' required/>
+                </div>
+                <div class='row'>
+                    <div class='title'>Departure Time:</div>
+                    <input name='departure_time' type='time' required/>
+                </div>
+                <div class='row'>
+                    <div class='title'>Arrival Time:</div>
+                    <input name='arrival_time' type='time' required/>
+                </div>
+                <div class='row'>
+                    <input name='create_leg_instance' type='submit'/>
+                </div>
+            </form>
+            <form id='flight_leg' method='POST' class='adminBox'>
+                <div class='row'>
+                    <div class='boxHeader'>Create Flight Leg</div>
+                </div>
+                <div class='row'>
+                    <div class='title'>Flight:</div>
+                    <select name='flight_number' required>
+                        {% for i in range(flight_leg_len_flight) %}
+                        <option value="{{flight_leg_flight_number[i]}}">{{flight_leg_flight_data[i]}}</option>
+                        {% endfor %}
+                    </select>
+                   
+                </div>
+                <div class='row'>
+                    <div class='title'>Leg Number:</div>
+                    <input name='leg_number' value="{{flight_leg_leg_number}}" required/>
+                </div>
+                <div class='row'>
+                    <div class='title'>Departure Airport:</div>
+                    <select name='departure_airport_code' required>
+                        {% for i in range(flight_leg_len_airport) %}
+                        <option value="{{flight_leg_airport_code[i]}}">{{flight_leg_airport_data[i]}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class='row'>
+                    <div class='title'>Leg Number:</div>
+                    <select name='arrival_airport_code' required>
+                        {% for i in range(flight_leg_len_airport) %}
+                        <option value="{{flight_leg_airport_code[i]}}">{{flight_leg_airport_data[i]}}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class='row'>
+                    <input name='create_flight_leg' type='submit'/>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
