--- a/static/styles/console.css
+++ b/static/styles/console.css
@@ -4,8 +4,12 @@ html, body {
     padding: 0;
     margin: 0;
 }
-.header {
+
+.mainHead {
+    flex: .75;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content {
