--- a/templates/adminMenu.html
+++ b/templates/adminMenu.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class='row'>
                     <div class='title'>Amount:</div>
-                    <input name='amount' type='text' required/>
+                    <input name='amount' type='number' step='0.01' required/>
                 </div>
                 <div class='row'>
                     <div class='title'>Restrictions:</div>
