--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -12,6 +12,19 @@ body {
     min-height: 100%;
 }
 
+.toggle_button {
+    background-color: white;
+    color: black;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 4px 32px;
+    text-decoration: none;
+    border: black solid 1px;
+    border-radius: 10px;
+    box-shadow: black 1px 1px 10px;
+    cursor: pointer;
+}
+
 .content {
     display: flex;
     flex-direction: column;
@@ -86,7 +99,6 @@ a.flightLink:hover>.td {
     border-top: black solid 0.5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     padding: 16px 16px;
 }
 .flightTable .th:last-child, .flightTable .td:last-child {
